--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,9 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
     - name: Install dependencies
-      run: sudo apt-get install libglib2.0 libglib2.0-dev libcyaml1 libcyaml-dev
+      run: sudo apt-get install libglib2.0 libglib2.0-dev # libcyaml1 libcyaml-dev # only in debian bullseye
+    - name: Build dependency libcyaml
+      run: apt-get source libcyaml && cd $(find * -maxdepth 0 -type d -name 'libcyaml-*' | head -n1) && make && sudo make install
     - name: Download CEF
       run: wget -O cef.tar.bz2 https://cef-builds.spotifycdn.com/cef_binary_88.1.6%2Bg4fe33a1%2Bchromium-88.0.4324.96_linux64_minimal.tar.bz2
     - name: Extract CEF headers
