--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
     - name: Install dependencies
-      run: sudo apt-get install libglib2.0 libglib2.0-dev # libcyaml1 libcyaml-dev # only in debian bullseye
+      run: sudo apt-get install libglib2.0 libglib2.0-dev libyaml-0-2 libyaml-dev # libcyaml1 libcyaml-dev # only in debian bullseye
     - name: Build dependency libcyaml
       run: wget https://github.com/tlsa/libcyaml/archive/refs/tags/v1.1.0.tar.gz && tar xvf v1.1.0.tar.gz && cd libcyaml-1.1.0 && make && sudo make install
     - name: Download CEF
@@ -23,3 +23,4 @@ jobs:
       with:
         name: spotify-adblock.so
         path: spotify-adblock.so
+$(shell $(PKG_CONFIG) --cflags $(LIBYAML)),)
